--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
 <title>Data Streams</title>
 <meta name="keywords" content="data streams">
-<meta name="description" content="Official Web Page of the Data Streams Track 2025 ACM Symposium on Applied Computing">
-<meta name="title" content="Data Streams Track 2025 ACM Symposium on Applied Computing">
+<meta name="description" content="Official Web Page of the Data Streams Track 2026 ACM Symposium on Applied Computing">
+<meta name="title" content="Data Streams Track 2026 ACM Symposium on Applied Computing">
 <meta name="author" content="Albert Bifet">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" >
 <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -56,8 +56,8 @@
 <h1><img align=center width=58 height=55 hspace=3 alt="" src="acm_logo.gif"> ACM Symposium on Applied Computing
 Data Streams Track</h1>
 in conjunction with <a href="https://www.sigapp.org/sac/sac2025/">
-ACM Symposium on Applied Computing</a>: The 40th Annual ACM Symposium on Applied Computing
-in Sicily, Italy March 31 - April 4, 2025
+ACM Symposium on Applied Computing</a>: The 41th Annual ACM Symposium on Applied Computing
+in Thessaloniki, Greece  MMarch 23-27, 2026
 </div></div>
 
 
@@ -75,7 +75,7 @@ in Sicily, Italy March 31 - April 4, 2025
 For the past thirty years, the ACM Symposium on Applied Computing has
 been a primary gathering forum for applied computer scientists,
 computer engineers, software engineers, and application developers
-from around the world. <br /><p>SAC 2025 is sponsored by the
+from around the world. <br /><p>SAC 2026 is sponsored by the
 <a href="http://www.acm.org/sigapp/">ACM Special Interest Group on Applied Computing</a>,<br />
 
 </p><p>The goal of DS track is to promote a meeting point and a
@@ -83,13 +83,13 @@ from around the world. <br /><p>SAC 2025 is sponsored by the
 
 </p>
 </p>
-<!--  --><font color="red" size="+1"> Submission Deadline Extended: 13 October </font>
-
+<!--  <font color="red" size="+1"> Submission Deadline Extended: 13 October </font>
+-->
 <h1 id="dates">Important Dates</h1>
 <ol>
-<li> Paper Submission: <b>October 13, 2024</b>
-<li> Author Notification: <b>October 30, 2024</b>
-<li> Camera-ready Copy: <b>November 29, 2024</b>
+<li> Paper Submission: <b>September 26, 2025</b>
+<li> Author Notification: <b>October 31, 2025</b>
+<li> Camera-ready Copy: <b>December 5, 2025</b>
 </ol>
 
 <h1 id="motivation">Motivation</h1>
