--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       <div class="container">
 <h1><img align=center width=58 height=55 hspace=3 alt="" src="acm_logo.gif"> ACM Symposium on Applied Computing
 Data Streams Track</h1>
-in conjunction with <a href="https://www.sigapp.org/sac/sac2025/">
-ACM Symposium on Applied Computing</a>: The 41th Annual ACM Symposium on Applied Computing
-in Thessaloniki, Greece  MMarch 23-27, 2026
+in conjunction with <a href="https://www.sigapp.org/sac/sac2026/">
+ACM Symposium on Applied Computing</a>: The 41st Annual ACM Symposium on Applied Computing
+in Thessaloniki, Greece  March 23-27, 2026
 </div></div>
 
 
@@ -70,7 +70,7 @@ in Thessaloniki, Greece  MMarch 23-27, 2026
 <a href="http://www.liaad.up.pt/~jgama/">Jo&atilde;o Gama</a>,
 <a href="https://www.heitorgomes.com/">Heitor Murilo Gomes</a>, Bruno Veloso <br />
 </p></div>
-<p align=middle><img  width=600 alt="" src="https://www.sigapp.org/sac/sac2025/img2025/background-11.jpg"></p>
+<p align=middle><img  width=600 alt="" src="https://www.sigapp.org/sac/sac2026/img2026/backgroundc.jpg"></p>
 <p>
 For the past thirty years, the ACM Symposium on Applied Computing has
 been a primary gathering forum for applied computer scientists,
@@ -166,8 +166,8 @@ appear on the front page, above the title of the paper.
 The paper length is 8 pages + 2 pages at an extra charge (max of 10 pages).
 There is a set of templates to support the required paper
 format for a number of document preparation systems at
-<a href="https://www.sigapp.org/sac/sac2025/authorkit.html">
-https://www.sigapp.org/sac/sac2025/authorkit.html</a>
+<a href="https://www.sigapp.org/sac/sac2026/authorkit.html">
+https://www.sigapp.org/sac/sac2026/authorkit.html</a>
 <br>
 Submission guidelines must be strictly followed.  A paper cannot be
 submitted to more than one track. Papers should be submitted in PDF
@@ -176,14 +176,14 @@ using the SAC Webpage.
 The maximum number of pages allowed for the final papers is 8 pages
 (about 5000 words), with the option (at additional expense) to add
 two (2) more pages.  Accepted papers in all categories will be
-published in the ACM SAC 2025 proceedings.
+published in the ACM SAC 2026 proceedings.
 <br>
 Paper registration is required, allowing the inclusion of papers, posters, or SRC abstracts in the conference proceedings. An author or a proxy attending SAC MUST present the work. This is a requirement for the presented work to be included in the ACM/IEEE digital library. No-show of registered papers, posters, and SRC abstracts will result in excluding them from the ACM/IEEE digital library.
 <br>
 <br>
 Important notice:
 <br>
-1.      Please submit your contribution via SAC 2025 Webpage: <a href="https://easychair.org/conferences/?conf=sac-2025">https://easychair.org/conferences/?conf=sac-2025</a>
+1.      Please submit your contribution via SAC 2026 Webpage: <a href="https://easychair.org/conferences/?conf=sac-2026">https://easychair.org/conferences/?conf=sac-2026</a>
 <br>
 2.      Paper registration is required, allowing the inclusion of the paper, poster, or SRC abstract in the conference proceedings. An author or a proxy attending SAC MUST present the paper. This is a requirement for including the work in the ACM/IEEE digital library. No-show of registered papers, posters, and SRC abstracts will result in excluding them from the ACM/IEEE digital library.<br>
 <p></p>
