--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ Paper registration is required, allowing the inclusion of papers, posters, or SR
 <br>
 Important notice:
 <br>
-1.      Please submit your contribution via SAC 2026 Webpage: <a href="https://easychair.org/conferences/?conf=sac-2026">https://easychair.org/conferences/?conf=sac-2026</a>
+1.      Please submit your contribution via SAC 2026 Webpage: <a href="https://easychair.org/my/conference?conf=sac2026">https://easychair.org/conferences/?conf=sac2026</a>
 <br>
 2.      Paper registration is required, allowing the inclusion of the paper, poster, or SRC abstract in the conference proceedings. An author or a proxy attending SAC MUST present the paper. This is a requirement for including the work in the ACM/IEEE digital library. No-show of registered papers, posters, and SRC abstracts will result in excluding them from the ACM/IEEE digital library.<br>
 <p></p>
