--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@ appear on the front page, above the title of the paper.
 The paper length is 8 pages + 2 pages at an extra charge (max of 10 pages).
 There is a set of templates to support the required paper
 format for a number of document preparation systems at
-<a href="https://www.sigapp.org/sac/sac2026/authorkit.html">
-https://www.sigapp.org/sac/sac2026/authorkit.html</a>
+<a href="https://www.sigapp.org/sac/sac2026/authorkit.php">
+https://www.sigapp.org/sac/sac2026/authorkit.php</a>
 <br>
 Submission guidelines must be strictly followed.  A paper cannot be
 submitted to more than one track. Papers should be submitted in PDF
