--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@ from around the world. <br /><p>SAC 2026 is sponsored by the
 
 </p>
 </p>
-<!--  <font color="red" size="+1"> Submission Deadline Extended: 13 October </font>
--->
+ <font color="red" size="+1"> Submission Deadline Extended: 10 October </font>
+<!--  -->
 <h1 id="dates">Important Dates</h1>
 <ol>
-<li> Paper Submission: <b>September 26, 2025</b>
-<li> Author Notification: <b>October 31, 2025</b>
+<li> Paper Submission: <b>October 10, 2025</b>
+<li> Author Notification: <b>November 21, 2025</b>
 <li> Camera-ready Copy: <b>December 5, 2025</b>
 </ol>
 
